--- a/views/form.ejs
+++ b/views/form.ejs
@@ -42,8 +42,8 @@
                     </div>
                 </div>
             </div>
-            <button class="add-skill-btn minimal-button">+</button>
-            <button class="remove-skill-btn minimal-button">-</button>
+            <button type="button" class="add-skill-btn minimal-button">+</button>
+            <button type="button" class="remove-skill-btn minimal-button">-</button>
             <div class="projects-section">
                 <div class="project-card col-xs-12">
                     <h2>Project 1</h2>
@@ -61,8 +61,8 @@
                     </div>
                 </div>
             </div>
-            <button class="add-project-btn minimal-button">Add Project</button>
-            <button class="remove-project-btn minimal-button">Remove Project</button>
+            <button  type="button" class="add-project-btn minimal-button">Add Project</button>
+            <button  type="button" class="remove-project-btn minimal-button">Remove Project</button>
             <div class="col-xs-12">
                 <div class="styled-input wide">
                     <textarea name="about"></textarea>
